objects/Issues_and_Risks__c.object
<CustomObject>
    <description>ProForce issues and Risks added to projects</description>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application ID#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Link__c</fullName>
        <description>Proforce Dev 091514</description>
        <formula>IF( ISPICKVAL(Application__c, &quot;Siebel&quot;), HYPERLINK(&quot;http://siebel.harrisbroadcast.com/service_enu&quot;, &quot;Siebel Service&quot;),
IF( ISPICKVAL(Application__c, &quot;Fogbugs&quot;), HYPERLINK(&quot;http://fogbugz.harrisbroadcast.com/default.asp?pg=pgLogon&amp;dest=pre%3DpreLogOff&quot;, &quot;Fogbugz&quot;),
IF( ISPICKVAL(Application__c, &quot;Bugzilla&quot;), HYPERLINK(&quot;http://siebel.harrisbroadcast.com/service_enu&quot;, &quot;Bugzilla&quot;),
&quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>Fogbugz</fullName>
                </value>
                <value>
                    <fullName>Bugzilla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <description>Folder Id for Box Integration - proforce dev 091514</description>
        <inlineHelpText>Folder Id</inlineHelpText>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Severity</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Subject</inlineHelpText>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue and Risk</label>
    <nameField>
        <label>Issue and Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues and Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>